<resources>
    <string name="app_name">APKMirror</string>
    <string name="storage_access">This app needs to have a permission to write to external storage in order to save files.</string>
    <string name="storage_access_denied">You wont be able to download now, restart the app.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="option1">Dont keep cache</string>
    <string name="option1desc">Makes the app size smaller, but the website might load slower</string>
    <string name="option2">Disable JavaScript</string>
    <string name="option2desc">Not recommended, but the option is there</string>
    <string name="option3">Colored navigation bar</string>
    <string name="option3desc">An option to color the navigation bar</string>
    <string name="option4">Show title in downloading notification</string>
    <string name="option4desc">A setting whether to show the file name(disabled) or show the title(enabled) in downloading notification</string>
    <string name="settingsrestart">Restarting</string>
    <string name="use_dark_theme">Use dark theme</string>
    <string name="for_those_who_want_to_join_the_dark_side">For those who want to join the dark side</string>
    <string name="developers">Developers</string>
    <string name="latest_uploads">Upload</string>
    <string name="option6">Allow screen rotation</string>
    <string name="option6desc">Rotate the screen on change orientation</string>
    <string name="download">Downloaded</string>
    <string name="open">Open</string>
    <string name="error">Error</string>
    <string name="settings">Settings</string>


</resources>
