<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cf.vojtechh.apkmirror.SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--Option one-->
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/optionswitch1"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/option1"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="@+id/option1" />

    <TextView
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/option1desc"
        android:id="@+id/optiondesc1"
        app:layout_constraintLeft_toLeftOf="@+id/option1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/option1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/option1"
        android:text="@string/option1"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Option two-->

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/optionswitch2"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/option2"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="@+id/option2" />

    <TextView
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/option2desc"
        android:id="@+id/optiondesc2"
        app:layout_constraintLeft_toLeftOf="@+id/option2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/option2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/option2"
        android:text="@string/option2"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/optiondesc1" />

    <!--option three-->

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/optionswitch3"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/option3"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="@+id/option3" />

    <TextView
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/option3desc"
        android:id="@+id/optiondesc3"
        app:layout_constraintLeft_toLeftOf="@+id/option3"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/option3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/option3"
        android:text="@string/option3"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/optiondesc2" />


    <!--Option four-->


    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/optionswitch4"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/option4" />

    <TextView
        android:layout_width="352dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/option4desc"
        android:id="@+id/optiondesc4"
        app:layout_constraintLeft_toLeftOf="@+id/option4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/option4" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/option4"
        android:text="@string/option4"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/optiondesc3"
        app:layout_constraintRight_toLeftOf="@+id/optionswitch4" />

    <!--Option five-->

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/optionswitch5"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/option5"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="@+id/option5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/option5"
        android:text="@string/use_dark_theme"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/optiondesc4"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/for_those_who_want_to_join_the_dark_side"
        android:id="@+id/optiondesc5"
        app:layout_constraintTop_toBottomOf="@+id/option5"
        app:layout_constraintLeft_toLeftOf="@+id/option5"
        android:layout_marginTop="8dp" />
    <!--Option six-->

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/optionswitch6"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/option6"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toTopOf="@+id/option6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/option6"
        android:text="@string/option6"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/optiondesc5"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/optiondesc6"
        app:layout_constraintTop_toBottomOf="@+id/option6"
        app:layout_constraintLeft_toLeftOf="@+id/option6"
        android:layout_marginTop="8dp"
        android:text="@string/option6desc" />

</android.support.constraint.ConstraintLayout>
</ScrollView>
